start MVC model

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=javaSpring
+
+
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mysql://localhost:3306/javaspring
+spring.datasource.username=root
+spring.datasource.password=Thuan2005@
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
