--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/javaspring
 spring.datasource.username=root
 spring.datasource.password=Thuan2005@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+
+#config user and password
+spring.security.user.name=user
+spring.security.user.password=123456
