--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 #config user and password
 spring.security.user.name=user
 spring.security.user.password=123456
+
+#config view engine 
+# spring.mvc.view.prefix=/WEB-INF/view/
+# spring.mvc.view.suffix=.jsp
